# erelic

./: .clang-format  .clang-tidy  CMakeLists.txt  Dockerfile  LICENSE.txt  README.md
cmake/: add_test_executable.cmake  clang_tools.cmake
src/: CMakeLists.txt  erelic.cpp
src/core/: CMakeLists.txt  address.cpp  address.hpp  device.cpp  device.hpp  instruction.cpp  instruction.hpp  utility.cpp  utility.hpp
src/core/tests/: CMakeLists.txt  address.cpp  device.cpp  dummy.cpp  instruction.cpp
